--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -163,7 +163,7 @@
   },
   "exposure_history": {
     "check_for_exposures": "Comprobar si hay exposiciones",
-    "days_remaining": "Quedan {{daysOfQuarantineLeft}} días de su período de cuarentena recomendado.",
+    "days_remaining": "Días restantes:",
     "exposure_detail": {
       "next_steps": "Revisar la guía de salud",
       "personalize_my_guidance": "Personalizar mi orientación",
@@ -191,7 +191,7 @@
     "possible_exposures": "Posibles exposiciones",
     "recommended_quarantine": "Cuarentena Recomendada",
     "review_health_guidance": "Revisar la guía de salud",
-    "stay_quarantined_through": "Manténgase en cuarentena durante:",
+    "stay_quarantined_through": "Último día:",
     "updated": "Actualizado",
     "why_did_i_get_an_en": "¿Por qué recibí un aviso de exposición?",
     "why_did_i_get_an_en_para": "Usted recibirá un aviso de exposición cuando haya estado cerca de alguien que luego reciba un resultado positivo a COVID-19 y que haya decidido notificarlo.",
