en symptoms copy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,7 +65,7 @@
     "review_cdc_guidance": "Review CDC guidance",
     "review_symptoms": "Review CDC symptoms",
     "stay_home_except_to_get_medical_care": "Stay home except to get medical care.",
-    "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick you should:",
+    "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick, you should:",
     "wear_a_face_covering": "wear a face covering."
   },
   "errors": {
