minor copy updates

--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -205,7 +205,7 @@
     "cant_check_for_exposures_button": "Habilitar Notificaciones de Exposición",
     "cant_check_for_exposures_title": "No pueden buscarse las Exposiciones.",
     "location_body": "Google requiere que los dispositivos que ejecutan Android 10 o versiones anteriores tengan habilitados los servicios de ubicación para usar las notificaciones de exposición. {{applicationName}} NO rastrea ni mantiene un registro de su ubicación.",
-    "location_title": "Active el servicio de localización",
+    "location_title": "Active el servicio de ubicación",
     "set_active_region_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación y presione ‘Fijar como región activa’.",
     "set_active_region_ios_title": "Fijar región activa",
     "share_exposure_information_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación. Asegúrese de activar ’Compartir Información de Exposición', presione 'Fijar como región activa'.",
@@ -359,7 +359,7 @@
     "home": "Panel",
     "how_the_app_works": "¿Cómo funciona la aplicación?",
     "legal": "Legal",
-    "location": "Localización",
+    "location": "Ubicación",
     "protect_privacy": "Cómo protegemos su privacidad",
     "select_language": "Seleccionar idioma",
     "select_symptoms": "Seleccionar síntomas",
