--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -519,6 +519,8 @@
     "invalid_code_title": "Invalid Code",
     "network_connection_body": "You need to be connected to WiFi to submit a verification code.",
     "network_connection_title": "No Internet Connection",
+    "not_authorized_body": "You did not authorize the app to share your Random IDs.",
+    "not_authorized_title": "Did not authorize",
     "no_keys_on_device_body": "You do not have any exposures to submit. Please continue to isolate.",
     "no_keys_on_device_title": "No exposures on device",
     "unknown_body": "An unexpected error occurred. Please try again.",
