--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -519,8 +519,8 @@
     "invalid_code_title": "Invalid Code",
     "network_connection_body": "You need to be connected to WiFi to submit a verification code.",
     "network_connection_title": "No Internet Connection",
-    "no_keys_on_device_body": "You do not have any exposures to submit. Please continue to isolate.",
-    "no_keys_on_device_title": "No exposures on device",
+    "no_keys_on_device_body": "You have not had the app long enough to share exposures. Please continue to isolate.",
+    "no_keys_on_device_title": "No exposures to share from device",
     "unknown_body": "An unexpected error occurred. Please try again.",
     "unknown_title": "Something Went Wrong"
   }
